--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
-  text-align: center;
+.navStyle {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navTextStyle {
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+.btn-custom {
+  transition: all ease-in-out .5s;
+  border: none;
+  overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-custom:hover::before {
+  width: 100%;
+  transition: all ease-in-out .5s;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-custom::before {
+  position: absolute;
+  left: 0;
+  width: 0;
+  height: 100%;
+  top: 0;
+  content: '';
+  background: #fdc703;
+  color: #fff !important;
+  transition: all ease-in-out .5s;
+  z-index: -1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.why-us-item {
+  z-index: 1;
+  border: none;
+  position: relative;
+  overflow: hidden;
+  transition: all ease-in-out .5s;
+  box-shadow: 0px 0px 1px 1px #ddd;
+  cursor: pointer;
+}
+
+
+.why-us-item:hover .why-us-content,
+.why-us-item:hover .why-us-content .icon {
+  color: #fff !important;
+  transition-delay: .4s;
+  transition: all ease-in-out .5s;
+
+}
+
+.why-us-item:hover .why-us-content .icon {
+  color: #fff !important;
+  transition-delay: .5s;
+  transition: all ease-in-out .8s;
+
+}
+
+.why-us-item:hover .why-us-content .card_review {
+  color: #fff !important;
+  transition-delay: .5s;
+  transition: all ease-in-out 0.9s;
+
+}
+
+.why-us-item:hover::before {
+  color: #fff !important;
+  height: 100%;
+  transition: all ease-in-out .5s;
+}
+
+.why-us-item::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 0;
+  width: 100%;
+  background: #029e9d;
+  transition: all ease-in-out .5s;
+  z-index: -1;
+}
+
+.bottom_animation {
+  z-index: 1;
+  border: none;
+  position: relative;
+  overflow: hidden;
+  transition: all ease-in-out .5s;
+  box-shadow: 0px 0px 1px 1px #ddd;
+  cursor: pointer;
+}
+
+
+.bottom_animation:hover .bottom_animation,
+.bottom_animation:hover .bottom_animation .icon {
+  color: #fff !important;
+  transition-delay: .4s;
+  transition: all ease-in-out .5s;
+
+}
+
+.bottom_animation:hover .bottom_animation .icon {
+  color: #fff !important;
+  transition-delay: .5s;
+  transition: all ease-in-out .8s;
+
+}
+
+.bottom_animation:hover::before {
+  width: 100%;
+  transition: all ease-in-out .5s;
+}
+
+.bottom_animation::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 3px;
+  transition: all ease-in-out 0.5s;
+  background: #029e9d !important;
+  cursor: pointer;
+}
+
+/* section heading */
+
+
+/* cart page design */
+.table :where(thead, tfoot) :where(th, td) {
+  background-color: transparent !important;
+
+}
+
+/* Swiper styling */
+.stroke_custom {
+  --progress: 0;
+  stroke-width: 4px;
+  stroke-dasharray: 125.6;
 }
